change project experience style

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<section id="home" class="jumbotron text-center">
 		<h3 class="">HI, <span style="color: #41E6CA;">I'M</span></h3>
 		<h1 id="Namaabot" class="display-2 text-uppercase">Muhammad Naufal Hafizh</h1>
-		<p class="lead leadinfor">Back End Developer</p>
+		<p class="lead leadinfor">Fullstack And Back End Developer</p>
 	</section>
 	<!-- Akhir Jumbotron -->
 
@@ -120,7 +120,7 @@
 					</div>
 					<div data-aos="fade-right" class="col-md-4">
 						<div class="card" style="border: none;">
-							<img src="img/about-min.jpg" style="border: none;" class="card-img-top rounded-2"
+							<img src="img/about-new.jpg" style="border: none;" class="card-img-top rounded-2"
 								alt="porto1">
 						</div>
 					</div>
@@ -255,50 +255,47 @@
 			</div>
 			<div class="card bg-dark" id="card-project">
 				<div class="row justify-content-center">
-					<div class="col-md-4 mt-3 mb-4" align="center">
+					<div class="col-md-4 mt-3 mb-4 container-project" align="center">
 						<img data-aos="fade-right" class="project-preview mb-3" src="img/project1.png" width="100%"
 							alt="" />
-						<h6>Apotek24k</h6>
-						<a data-aos="fade-up" class="view-code text-light"
-							href="https://github.com/krisdewa/PHP-CRUD-Apotek">View
-							Source Code</a>
+							<div class="overlay-project">
+								<h6 class="text-project fw-bold"><a class="text-light text-decoration-none" href="https://github.com/krisdewa/PHP-CRUD-Apotek">Apotek24k</a></h6>
+							</div>
 					</div>
-					<div class="col-md-4 mt-3" align="center">
+					<div class="col-md-4 mt-3 container-project" align="center">
 						<img data-aos="fade-left" class="project-preview mb-3" src="img/project2-2.png" width="100%"
 							alt="" />
-						<h6>Basis Data Toko Bangunan</h6>
-						<a data-aos="fade-up" class="view-code text-light"
-							href="https://github.com/NaufalHafizh/Responsi_Basisdata">View Source
-							Code</a>
+						<div class="overlay-project">
+							<h6 class="text-project fw-bold"><a class="text-light text-decoration-none" href="https://github.com/NaufalHafizh/Responsi_Basisdata">Basis Data Toko Bangunan</a></h6>
+						</div>
 					</div>
-					<div class="col-md-4 mt-3" align="center">
+					<div class="col-md-4 mt-3 container-project" align="center">
 						<img data-aos="fade-left" class="project-preview mb-3" src="img/project 3.png" width="100%"
 							alt="" />
-						<h6>Laravel Blog</h6>
-						<a data-aos="fade-up" class="view-code text-light"
-							href="https://github.com/NaufalHafizh/Laravel_8_Study_Progress">View Source
-							Code</a>
+						<div class="overlay-project">
+							<h6 class="text-project fw-bold"><a class="text-light text-decoration-none" href="https://github.com/NaufalHafizh/Laravel_8_Study_Progress">Laravel Blog</a></h6>
+						</div>
 					</div>
-					<div class="col-md-4 mt-3" align="center">
+					<div class="col-md-4 mt-3 container-project" align="center">
 						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_4.png" width="100%"
 							height="50%" alt="" />
-						<h6>Raja Kelapa Indonesia</h6>
+							<div class="overlay-project">
+								<h6 class="text-project fw-bold"><a class="text-light text-decoration-none" href="">Raja Kelapa Indonesia</a></h6>
+							</div>
 					</div>
-					<div class="col-md-4 mt-3" align="center">
+					<div class="col-md-4 mt-3 container-project" align="center">
 						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_5.png" width="100%"
 							height="50%" alt="" />
-						<h6>Sistem informasi dan manajemen paket</h6>
-						<a data-aos="fade-up" class="view-code text-light"
-							href="https://github.com/NaufalHafizh/Informasi-Dan-Manajemen-Paket">View Source
-							Code</a>
+						<div class="overlay-project">
+							<h6 class="text-project fw-bold"><a class="text-light text-decoration-none" href="https://github.com/NaufalHafizh/Informasi-Dan-Manajemen-Paket">Sistem informasi dan manajemen paket</a></h6>
+						</div>
 					</div>
-					<div class="col-md-4 mt-3" align="center">
+					<div class="col-md-4 mt-3 container-project" align="center">
 						<img data-aos="fade-left" class="project-preview mb-3" src="img/project_6.png" width="100%"
 							height="50%" alt="" />
-						<h6>Jurnal Informatika</h6>
-						<a data-aos="fade-up" class="view-code text-light"
-							href="https://github.com/krisdewa/TA-RWEB">View Source
-							Code</a>
+						<div class="overlay-project">
+							<h6 class="text-project fw-bold"><a class="text-light text-decoration-none" href="https://github.com/krisdewa/TA-RWEB">Jurnal Informatika</a></h6>
+						</div>
 					</div>
 				</div>
 			</div>
