fix project name

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 						<img data-aos="fade-left" class="project-preview mb-3" src="assets/img/project 3.png"
 							width="100%" alt="" />
 						<div style="text-align: justify;" class="">
-							<h6 class="fw-bold">LinkTree Clone</h6>
+							<h6 class="fw-bold">Simple News Website</h6>
 							<p>
 								The website is developed using Laravel 8 as a form of learning Laravel 8. This website
 								contains simple news and dashboard (Backend) as Content Management System (CMS).
