--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<!-- About -->
 	<section id="about">
 		<div class="container">
-			<div style="background-color: #2D3541" id="about-card" class="card">
+			<div id="about-card" class="card bg-dark text-white">
 				<div class="row g-4 justify-content-center fs-5 text-justify">
 					<div class="col-md-5">
 						<h2 data-aos="fade-right" style="color: #41E6CA; font-weight: 700;">Wanna Know Me ?</h2>
