Add new project

--- a/index.html
+++ b/index.html
@@ -258,8 +258,10 @@
 						<div style="text-align: justify;" class="">
 							<h6 class="fw-bold">IDPS Design Using the Security Development Life Cycle (SDLC) Method</h6>
 							<p>
-								Web-based system to prevent sql-Injection attacks using codeignaiter 3 combined with
-								ubuntu virtual private server. The technologies used are snort, barnyard2 and iptables.
+								This project is a final project (Thesis) with the aim of detecting and preventing
+								SQL-Injection attacks on the Man 2 Magetan school web. Using Codeignaiter 3 which is
+								deployed on Virtual Private (VPS) ubuntu and using snort as a detection engine and
+								barnyard2 for database connections and iptable as an access blocker.
 							</p>
 							<p class="">
 								<button class="btn btn-secondary">HTML</button>
@@ -284,6 +286,25 @@
 								<span><button class="btn btn-secondary">CSS</button></span>
 								<span><button class="btn btn-secondary">JS</button></span>
 								<span><button class="btn btn-secondary">PHP</button></span>
+							</p>
+						</div>
+					</div>
+					<div class="col-md-4 mt-3 container-project" align="center">
+						<img data-aos="fade-left" class="project-preview mb-3" src="assets/img/project7.png"
+							width="100%" alt="" />
+						<div style="text-align: justify;" class="">
+							<h6 class="fw-bold">Kost Qita Yogyakarta</h6>
+							<p>
+								This freelance project aims to digitize conventional boarding houses to make boarding
+								house management easier and more structured. As a backend, I developed the website
+								functionality according to user requests and fixed existing bugs. The technology used to
+								build the website is Codeignaiter 3.
+							</p>
+							<p>
+								<span><button class="btn btn-secondary">HTML</button></span>
+								<span><button class="btn btn-secondary">CSS</button></span>
+								<span><button class="btn btn-secondary">JS</button></span>
+								<span><button class="btn btn-secondary">Codeignaiter 3</button></span>
 							</p>
 						</div>
 					</div>
